adding environment and testrun group support

--- a/systemtest.cfg
+++ b/systemtest.cfg
@@ -7,3 +7,5 @@ slick-project-name=Snot
 slick-release=1.0
 slick-build=dev
 slick-testplan=System Tests
+slick-environment-name=System Test
+slick-testrun-group=Snot System Tests
