--- a/unittest.cfg
+++ b/unittest.cfg
@@ -6,3 +6,5 @@ slick-project-name=Snot
 slick-release=1.0
 slick-build=dev
 slick-testplan=Unit Tests
+slick-environment-name=Dev
+slick-testrun-group=Snot Unit Tests
