updates for snot
Adding updatable testrun to snot.testrun
Adding requirement of new slickqa that adds testrun.files and
testrun.info

--- a/systemtest.cfg
+++ b/systemtest.cfg
@@ -2,11 +2,11 @@
 nologcapture=True
 no-skip=True
 with-snot=True
-slick-url=http://localhost:9000
+slick-url=http://localhost/slick
 slick-project-name=Snot
 slick-release=1.0
 slick-build=dev
-slick-build-from-function=systemtest.buildinfo
+;slick-build-from-function=systemtest.buildinfo
 slick-testplan=System Tests
 slick-environment-name=System Test
 ;slick-testrun-group=Snot System Tests
